# ChatApp-Rust-React

./: .gitignore  README.md  compose.yml  dependabot.yml
.github/: dependabot.yml
.github/workflows/: dependabot.yml  rust-clippy.yml  rust.yml
chatapp-rust/: Cargo.toml
chatapp-rust/src/: main.rs
client/: package.json
server/: Cargo.toml  Dockerfile
server/src/: main.rs
