[package]
name = "chatapp-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salvo = {  features = ["jwt-auth"] }
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0.171", features = ["derive"] }
jsonwebtoken = "8.0"
time = "0.3"